<resources>
    <string name="area">en</string>
    <string name="app_name">IMAX+</string>

    <string name="application_info_title">Application Info</string>
    <string name="application_info_text" formatted="false">
        <![CDATA[
            <p>Version: %1$s</p>
            <p>This application is open source at <a href="https://github.com/gnastnosaj/Pandora">https://github.com/gnastnosaj/Pandora</a></p>
        ]]>
    </string>

    <string name="developer_info_title">Developer Info</string>
    <string name="developer_info_text">
        <![CDATA[
            <p><a href="https://github.com/gnastnosaj">Jason Tsang</a></p>
        ]]>
    </string>

    <string name="license_title">License</string>
    <string name="license_text" formatted="false">
        <![CDATA[
            <p>The MIT License (MIT)</p>

            <p>Copyright (c) %1$s Jason Tsang</p>

            <p>Permission is hereby granted, free of charge, to any person obtaining a copy
            of this software and associated documentation files (the "Software"), to deal
            in the Software without restriction, including without limitation the rights
            to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
            copies of the Software, and to permit persons to whom the Software is
            furnished to do so, subject to the following conditions:</p>

            <p>The above copyright notice and this permission notice shall be included in all
            copies or substantial portions of the Software.</p>

            <p>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
            IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
            FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
            AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
            LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
            OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
            SOFTWARE.</p>
        ]]>
    </string>

    <string name="splash_slogan">It was a time filled with wonder that I\'ll always remember.</string>
    <string name="splash_version">V %1$s</string>
    <string name="splash_copyright">Copyright &#169; %1$s IMAX+ All Rights Reserved\nPower by Jason Tsang</string>

    <string name="drawer_item_plugin_center">Plugin Center</string>
    <string name="drawer_item_section_plugins">Section Plugins</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_terminal">Terminal</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_nsw">NSW</string>

    <string name="action_cancel">Cancel</string>
    <string name="action_check">Check</string>
    <string name="action_about">About</string>
    <string name="action_play">Play</string>
    <string name="action_mosaic">Mosaic</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_save">Save</string>
    <string name="action_clear">Clear</string>
    <string name="action_like">Like</string>
    <string name="action_favourite">Favourite</string>
    <string name="action_model">Stars</string>
    <string name="action_live_wallpaper">Live Wallpaper</string>
    <string name="action_open_with_browser">Open with Browser</string>
    <string name="action_download_video">Download Video</string>

    <string name="searching">╭ (′▽`)╭(′▽`)╭(′▽`)╯In the crazy search, please go for a stroll first～</string>
    <string name="search_result_not_found">⊙﹏⊙‖∣°Tragedy, no resources available. Please try again...</string>
    <string name="search_result_found">＾(￣）￣)《(￣）￣)＾Hey, found that available resources, driving safety attention yo～</string>

    <string name="share_pandora">Found a welfare App "IMAX+", free to watch popular movies, more hidden benefits and so you come to dig, recommendation ~:http://fir.im/vrbx is great!</string>

    <string name="save_to_phone">Saving to phone?</string>
    <string name="save_do">Saving</string>
    <string name="save_cancel">Cancel</string>
    <string name="save_picture_success">picture saved to %s</string>
    <string name="save_picture_fail">fail to save picture, please try again</string>

    <string name="copy_magnet_success">The Magnet Link has been copied to clipboard</string>

    <string name="about">About</string>
    <string name="about_features">Features</string>
    <string name="about_help_and_feedback">Help &#038; Feedback</string>
    <string name="about_check_for_updates">Check for Updates</string>
    <string name="about_version">IMAX+ %1$s</string>
    <string name="about_copyright">Copyright &#169; %1$s Jason Tsang.\nAll Rights Reserved.</string>

    <string name="url_update">https://raw.githubusercontent.com/gnastnosaj/Pandora/master/app/service/update.json</string>
    <string name="url_features">https://github.com/gnastnosaj/Pandora/wiki</string>
    <string name="url_help_and_feedback">https://github.com/gnastnosaj/Pandora/issues</string>
    <string name="url_python_plugin">https://raw.githubusercontent.com/gnastnosaj/Pandora/master/app/service/plugins/python/%1$s.zip</string>

    <string name="plugin_center_my_plugins">My Plugins</string>
    <string name="plugin_center_manage">Manage</string>
    <string name="plugin_center_complete">Complete</string>
    <string name="plugin_center_python_initialize">Wait a minute! Plugin is initializing.</string>
    <string name="plugin_center_python_initialize_fail">Plugin initialization failed, please try again</string>

    <string name="adult_warning">This item contains sexually explicit material and is not intended for children. By continuing past this dialog you are stating that you are of legal age and it is legal in your area to view pornographic material of sexy Japanese beauties .</string>
    <string name="adult_warning_continue">CONTINUE NOW</string>
    <string name="adult_warning_not_18">I AM NOT 18 YEARS OLD</string>

    <string name="video_player_error">Something error happened, please try again later!</string>

    <string name="detail_resource">Resource</string>
    <string name="detail_intro">Intro</string>

    <string name="define_font_Glyphter">com.mikepenz.glyphter_typeface_library.Glyphter</string>
</resources>
