<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activity.OpenSourceActivity">

    <include layout="@layout/view_toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_white_1000"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <TextView
                style="@style/HeadlineTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/application_info_title" />

            <TextView
                android:id="@+id/application_info"
                style="@style/TextContentStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/HeadlineTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/developer_info_title" />

            <TextView
                android:id="@+id/developer_info"
                style="@style/TextContentStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/HeadlineTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/license_title" />

            <TextView
                android:id="@+id/license"
                style="@style/TextContentStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>