<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_200"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activity.AboutActivity"
    tools:showIn="@layout/activity_about">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:gravity="center_horizontal">
                <ImageView
                    android:src="@mipmap/ic_launcher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textColor="@color/grey_500"
                    android:textSize="16sp"
                    android:id="@+id/about_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:id="@+id/about_features"
                android:background="@drawable/item_settings"
                android:padding="10dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/about_features"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">
                <FrameLayout
                    android:background="@color/grey_300"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"></FrameLayout>
            </FrameLayout>

            <TextView
                android:id="@+id/about_help_and_feedback"
                android:background="@drawable/item_settings"
                android:padding="10dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/about_help_and_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">
                <FrameLayout
                    android:background="@color/grey_300"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"></FrameLayout>
            </FrameLayout>

            <TextView
                android:id="@+id/about_check_for_updates"
                android:background="@drawable/item_settings"
                android:padding="10dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/about_check_for_updates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:gravity="center_horizontal">
                <TextView
                    android:textColor="@color/grey_500"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:id="@+id/about_copyright"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</FrameLayout>